--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="col-4">
-                        <h2><a href="www.ruanrong.com" target="_blank">软融展示官网</a></h2>
+                        <h2><a href="www.ruanron.com" target="_blank">软融展示官网</a></h2>
                         <p>使用jQuery全屏滚动插件fullPage.js，兼容手机</p>
                     </div>
                     <div class="col-2 center">
@@ -151,6 +151,7 @@
 
                 <h4>窝游云信息技术有限公司（前端工程师）</h4>
                 <p>2016年6月 - 至今</p>
+                <p>主要开发一些商城类Webapp，及一些展示型的网站</p>
                 <p>相关技术：Webapp, touch.js，flex布局</p>
 
             </div>
