--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 </div>
                 <div class="row" style="margin-top:10px;">
                     <div class="col-2 center">
-                        <a class="circle-img" href="www.ruanron.com" target="_blank">
+                        <a class="circle-img" href="http://www.ruanron.com" target="_blank">
                             <img src="img/book.png" alt="jCorner" />
                         </a>
                     </div>
                     <div class="col-4">
-                        <h2><a href="www.ruanron.com" target="_blank">软融展示官网</a></h2>
+                        <h2><a href="http://www.ruanron.com" target="_blank">软融展示官网</a></h2>
                         <p>使用jQuery全屏滚动插件fullPage.js，兼容手机</p>
                     </div>
                     <div class="col-2 center">
