--- a/en.html
+++ b/en.html
@@ -63,12 +63,12 @@
                 </div>
                 <div class="row" style="margin-top:10px;">
                     <div class="col-2 center">
-                        <a class="circle-img" href="www.ruanron.com" target="_blank">
+                        <a class="circle-img" href="http://www.ruanron.com" target="_blank">
                             <img src="img/book.png" alt="jCorner" />
                         </a>
                     </div>
                     <div class="col-4">
-                        <h2><a href="www.ruanron.com" target="_blank">RUANRON Homepage</a></h2>
+                        <h2><a href="http://www.ruanron.com" target="_blank">RUANRON Homepage</a></h2>
                         <p>Fullscreen scroll plugin fullpage.js of Jquery can make it compatile for phones</p>
                     </div>
                     <div class="col-2 center">
