--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </div>
         <link rel="stylesheet" href="../blog/css/font.css" type="text/css" />
         
-        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script src="./jquery.js"></script>
         <script>window.jQuery || document.write('<script src="../blog/js/jquery-1.11.1.min.js"><\/script>');</script>
         <script type="text/javascript" src="vendor/jquery.pagepiling.min.js"></script>
         <script type="text/javascript" src="js/index.min.js"></script>
